1.添加DB缓存功能，已爬虫过的就存入DB； 2.关闭Springboot启动日志中banner； 3.规范化命名（例DTO->Dto）； 4.改用独立日志配置文件、优化日志； 5.修正isDate()函数没有验空的bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
+# 设为true时，核心Logger（包含嵌入式容器、Hibernate、Spring等）会输出更多内容，但自己应用的日志并不会因此输出为DEBUG级别
+#debug=false
+
+# Springboot Banner
+spring.main.banner-mode=off
+
 # 修改启动端口为 80
 server.port=80
 
 # 启用hiddenMethod过滤器
 spring.mvc.hiddenmethod.filter.enabled=true
 
-# 指定独立日志配置文件
-#logging.config=classpath:logback-spring.xml
-# 将本项目日志输出级别调整为DEBUG
-logging.level.cn.soyadokio.jrbbws=INFO
-# 将HttpClient的日志输出级别调整为WARN
-logging.level.org.apache=WARN
-logging.level.httpclient=WARN
-# 指定日志输出文件路径（默认只输出控制台）
-#logging.file=/data/logs/jrbbws_monitor_all.log
-logging.file=jrbbws_monitor_all.log
+# 指定自定义名字的独立日志配置文件（其实logback-spring.xml这个日志若在根目录，则默认就会被加载，但本项配置文件路径不在默认的根路径）
+logging.config=classpath:config/logback-spring.xml
