--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>cn.soyadokio</groupId>
 	<artifactId>jrbbws</artifactId>
-	<version>2.2.2</version>
-	<packaging>jar</packaging>
+	<version>2.2.3</version>
+	<packaging>war</packaging>
 
 
 	<properties>
