--- a/src/main/resources/config/mysql-config.properties
+++ b/src/main/resources/config/mysql-config.properties
@@ -1,5 +1,5 @@
 # MySQL DB properties
 DB_DRIVER_CLASS=com.mysql.jdbc.Driver
-DB_URL=jdbc:mysql://47.105.81.128:3306/jrbb?useSSL=false
+DB_URL=jdbc:mysql://47.105.81.128:3306/jrbbws?useSSL=false
 DB_USERNAME=admin
 DB_PASSWORD=3543596
